[BUG] Reduce gutter on check/radios with right aligned labels
make sure the label is properly associated with the input

--- a/stylesheets/_forms.scss
+++ b/stylesheets/_forms.scss
@@ -338,7 +338,7 @@ textarea {
     margin-left: 20%;
     input {
       margin-left: ($gutter-width) + 5px;
-      margin-right: $gutter-width;
+      margin-right: $gutter-width / 2;
     }
   }
 }
